# ALC_Hub_Esp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  credentials.sdkconfig.template  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  certificate.h  coproc_link.cpp  coproc_link.hpp  main.cpp  mqtt_client.cpp  mqtt_client.hpp  peripheral_handler.cpp  peripheral_handler.hpp  secrets_manager.cpp  secrets_manager.hpp  time_sync.cpp  time_sync.hpp  uart_frame.cpp  uart_frame.hpp  wifi_sta.cpp  wifi_sta.hpp
